# ghsa-bsoccer

./: .gitignore  DEVELOPMENT.md  netlify.toml  pyproject.toml
.github/workflows/: refresh.yml
model/: dixon_coles.py  evaluate.py  massey.py  simulate.py
pipeline/: brackets.py  maxpreps_enrichment.json  maxpreps_slug_overrides.json  name_overrides.json  normalize.py  scrape_ghsa.py  scrape_maxpreps.py
public/: bracket_odds.json  brackets.json  index.html  ratings.json
scripts/: refresh.py  run_full_pipeline.py
tests/: test_dixon_coles.py  test_massey.py  test_normalize.py  test_scrape_ghsa.py  test_scrape_maxpreps.py  test_simulate.py
