[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghsa-bsoccer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyarrow>=15.0",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
include = ["pipeline*", "model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
